# mealie-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  vulture_whitelist.py
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
mealie_mcp/: __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  graph_config.py  kg_ingest.py  kg_media.py  mcp.py  mcp_config.json  mcp_server.py  mealie_agent.py  mealie_api.py  mealie_mcp.py  tools.py  utils.py
mealie_mcp/agent/: IDENTITY.md
mealie_mcp/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json  templates.py
mealie_mcp/api/: __init__.py  api_client_admin.py  api_client_app.py  api_client_base.py  api_client_explore.py  api_client_groups.py  api_client_households.py  api_client_organizer.py  api_client_recipes.py  api_client_shared.py  api_client_users.py  api_client_utils.py
mealie_mcp/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
mealie_mcp/mcp/: __init__.py  mcp_admin.py  mcp_app.py  mcp_explore.py  mcp_groups.py  mcp_households.py  mcp_organizer.py  mcp_recipes.py  mcp_shared.py  mcp_users.py  mcp_utils.py
mealie_mcp/ontology/: __init__.py  certification.json  mealie.ttl
mealie_mcp/ontology/fixtures/: records.json
mealie_mcp/ontology/mappings/: source.yaml
mealie_mcp/ontology/migrations/: manifest.json
mealie_mcp/ontology/shapes/: connector.shacl.ttl
mealie_mcp/prompts/: culinary_specialist.json  main_agent.json
mealie_mcp/skills/mealie-admin/: SKILL.md
mealie_mcp/skills/mealie-app/: SKILL.md
mealie_mcp/skills/mealie-docs/: SKILL.md
mealie_mcp/skills/mealie-docs/reference/: contributors_developers-guide_building-packages.md  contributors_developers-guide_code-contributions.md  contributors_developers-guide_database-changes.md  contributors_developers-guide_maintainers.md  contributors_developers-guide_migration-guide.md  contributors_developers-guide_starting-dev-server.md  contributors_guides_ingredient-parser.md  contributors_non-coders.md  contributors_translating.md  docs.md  documentation_community-guide_bring-api.md  documentation_community-guide_bulk-url-import.md  documentation_community-guide_home-assistant.md  (+25 more)
mealie_mcp/skills/mealie-explore/: SKILL.md
mealie_mcp/skills/mealie-groups/: SKILL.md
mealie_mcp/skills/mealie-households/: SKILL.md
mealie_mcp/skills/mealie-mcp-operations/: SKILL.md
mealie_mcp/skills/mealie-meal-planning/: SKILL.md  WORKFLOW.md
mealie_mcp/skills/mealie-organizer/: SKILL.md
mealie_mcp/skills/mealie-organizer-catalog/: SKILL.md  WORKFLOW.md
mealie_mcp/skills/mealie-recipe/: SKILL.md
mealie_mcp/skills/mealie-recipe-management/: SKILL.md  WORKFLOW.md
mealie_mcp/skills/mealie-recipes/: SKILL.md
mealie_mcp/skills/mealie-shared/: SKILL.md
mealie_mcp/skills/mealie-starter/: SKILL.md
mealie_mcp/skills/mealie-users/: SKILL.md
mealie_mcp/skills/mealie-utils/: SKILL.md
overview/: index.html
platform/: index.html
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_concept_parity.py  test_init.py  test_init_dynamics.py  test_kg_ingest.py  test_kg_media.py
usage/: index.html
(+2 files in other folders)
