[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-mcp"
version = "0.2.11"
description = "Mealie MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Genius", email = "genius@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.8.1",
    "urllib3>=2.2.2",
    "fastmcp>=3.0.0b1",
    "eunomia-mcp>=0.3.10",
    "fastapi>=0.128.0"
]

[project.optional-dependencies]
a2a = [
    "pydantic-ai-slim[fastmcp,openai,anthropic,groq,mistral,google,huggingface,a2a,ag-ui,web]>=1.58.0",
    "pydantic-ai-skills>=v0.4.0",
    "fastapi>=0.128.0"
]

all = [
    "fastmcp>=3.0.0b1",
    "eunomia-mcp>=0.3.10",
    "pydantic-ai-slim[fastmcp,openai,anthropic,groq,mistral,google,huggingface,a2a,ag-ui,web]>=1.58.0",
    "pydantic-ai-skills>=v0.4.0",
    "fastapi>=0.128.0"
]

[project.scripts]
mealie-mcp = "mealie_mcp.mealie_mcp:mcp.run"
mealie-agent = "mealie_mcp.mealie_agent:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mealie_mcp = ["mcp_config.json", "skills/**"]
