[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-mcp"
version = "0.2.20"
description = "Mealie MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Genius", email = "genius@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities[mcp]>=0.2.6",
]

[project.optional-dependencies]
agent = [
    "agent-utilities[agent,logfire]>=0.2.6",
]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.6",
]

[project.scripts]
mealie-mcp = "mealie_mcp.mcp:mcp_server"
mealie-agent = "mealie_mcp.agent:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mealie_mcp = [ "mcp_config.json", "skills/**", "agent/**",]
