[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-mcp"
version = "0.2.57"
description = "Mealie MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "agent-utilities[mcp]>=0.2.42",]
[[project.authors]]
name = "Genius"
email = "genius@example.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
agent = [ "agent-utilities[agent,logfire]>=0.2.42",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.2.42",]
test = [ "pytest", "pytest-asyncio",]

[project.scripts]
mealie-mcp = "mealie_mcp.mcp_server:mcp_server"
mealie-agent = "mealie_mcp.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
mealie_mcp = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
